<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="activity_main_title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores">Scores App</string>
    <string name="library">Library App</string>
    <string name="bigger">Build it Bigger</string>
    <string name="xyz">XYZ Reader</string>
    <string name="capstone">Capstone: My Own App</string>

</resources>
